[gd_scene load_steps=17 format=3 uid="uid://7lop8i3prupl"]

[ext_resource type="Script" path="res://ElectricTower/ElectricTower.gd" id="1_ruqfl"]
[ext_resource type="Texture2D" uid="uid://ddpr7v5oajmrk" path="res://ElectricTower/Sprites/BeginElectricTower.png" id="1_ttmb0"]
[ext_resource type="Texture2D" uid="uid://dbt3s7n0utw3f" path="res://ElectricTower/Sprites/WireExtension.png" id="2_rh35o"]
[ext_resource type="Texture2D" uid="uid://dxb5blr55hr3l" path="res://ElectricTower/Sprites/EndElectricTower.png" id="3_kaowo"]
[ext_resource type="Texture2D" uid="uid://g5clbc5t052h" path="res://ElectricTower/Sprites/LegsExtension.png" id="3_wxefq"]
[ext_resource type="Texture2D" uid="uid://bvf467wnyjgns" path="res://ElectricTower/Sprites/extensionElectricTower.png" id="5_n8y71"]
[ext_resource type="Texture2D" uid="uid://dy7se4wagnypg" path="res://ElectricTower/Sprites/SparksBegining1.png" id="7_luato"]
[ext_resource type="Texture2D" uid="uid://d3ghbl07rwora" path="res://ElectricTower/Sprites/SparksBegining2.png" id="8_b3xxi"]
[ext_resource type="Texture2D" uid="uid://cloq704mgrmpe" path="res://ElectricTower/Sprites/SparksBegining3.png" id="9_ynh4n"]
[ext_resource type="Texture2D" uid="uid://mr64lba4n5eo" path="res://ElectricTower/Sprites/SparksBegining4.png" id="10_qxw2q"]
[ext_resource type="Texture2D" uid="uid://b0bw8v4r164m0" path="res://ElectricTower/Sprites/SparksDamage1.png" id="11_w4m1l"]
[ext_resource type="Texture2D" uid="uid://bpsim4pv8n58e" path="res://ElectricTower/Sprites/SparksDamage2.png" id="12_43uuu"]
[ext_resource type="Texture2D" uid="uid://d4feoyrxggyi" path="res://ElectricTower/Sprites/SparksDamage3.png" id="13_tel72"]
[ext_resource type="Texture2D" uid="uid://bboim3s7jm6v1" path="res://ElectricTower/Sprites/SparksDamage4.png" id="14_flaqf"]

[sub_resource type="SpriteFrames" id="SpriteFrames_6knjb"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("7_luato")
}, {
"duration": 1.0,
"texture": ExtResource("8_b3xxi")
}, {
"duration": 1.0,
"texture": ExtResource("9_ynh4n")
}, {
"duration": 1.0,
"texture": ExtResource("10_qxw2q")
}],
"loop": true,
"name": &"SparkBegining",
"speed": 15.0
}, {
"frames": [],
"loop": true,
"name": &"SparkDamage",
"speed": 5.0
}]

[sub_resource type="SpriteFrames" id="SpriteFrames_l2spq"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("11_w4m1l")
}, {
"duration": 1.0,
"texture": ExtResource("12_43uuu")
}, {
"duration": 1.0,
"texture": ExtResource("13_tel72")
}, {
"duration": 1.0,
"texture": ExtResource("14_flaqf")
}],
"loop": false,
"name": &"SparkDamage",
"speed": 11.0
}]

[node name="Node2D" type="Node2D"]
position = Vector2(35, 38)
script = ExtResource("1_ruqfl")
type = "5Sections"

[node name="ElectricTower5Sections" type="Area2D" parent="."]
visible = false
collision_layer = 2

[node name="BeginingElectricTower" type="Sprite2D" parent="ElectricTower5Sections"]
texture = ExtResource("1_ttmb0")

[node name="Legs" type="Sprite2D" parent="ElectricTower5Sections/BeginingElectricTower"]
position = Vector2(0, 27)
texture = ExtResource("3_wxefq")

[node name="WireExtension2" type="Sprite2D" parent="ElectricTower5Sections"]
position = Vector2(96, 0)
texture = ExtResource("2_rh35o")

[node name="WireExtension" type="Sprite2D" parent="ElectricTower5Sections"]
position = Vector2(32, 0)
texture = ExtResource("2_rh35o")

[node name="ExtensionElectricTower" type="Sprite2D" parent="ElectricTower5Sections"]
position = Vector2(64, 0)
texture = ExtResource("5_n8y71")

[node name="Legs" type="Sprite2D" parent="ElectricTower5Sections/ExtensionElectricTower"]
position = Vector2(0, 27)
texture = ExtResource("3_wxefq")

[node name="EndElectricTower" type="Sprite2D" parent="ElectricTower5Sections"]
position = Vector2(128, 0)
texture = ExtResource("3_kaowo")

[node name="Legs" type="Sprite2D" parent="ElectricTower5Sections/EndElectricTower"]
position = Vector2(0, 27)
texture = ExtResource("3_wxefq")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="ElectricTower5Sections"]
polygon = PackedVector2Array(-8, 3, 4, 7, 11, 9, 25, 11, 43, 6, 48, 3, 53, 3, 62, 6, 77, 9, 84, 10, 97, 10, 114, 3, 114, 3, 114, 3)

[node name="SparksBegining1Section" type="AnimatedSprite2D" parent="ElectricTower5Sections"]
position = Vector2(1, 0)
scale = Vector2(1.34375, 1.47656)
sprite_frames = SubResource("SpriteFrames_6knjb")
animation = &"SparkBegining"
autoplay = "SparkBegining"
frame_progress = 0.990027
speed_scale = 0.2

[node name="SparksBegining2Section" type="AnimatedSprite2D" parent="ElectricTower5Sections"]
position = Vector2(65, 2)
scale = Vector2(1.34375, 1.47656)
sprite_frames = SubResource("SpriteFrames_6knjb")
animation = &"SparkBegining"
autoplay = "SparkBegining"
frame_progress = 0.179354
speed_scale = 0.2

[node name="SparksBegining3Section" type="AnimatedSprite2D" parent="ElectricTower5Sections"]
position = Vector2(128, 2)
scale = Vector2(1.34375, 1.47656)
sprite_frames = SubResource("SpriteFrames_6knjb")
animation = &"SparkBegining"
autoplay = "SparkBegining"
frame_progress = 0.179354
speed_scale = 0.2

[node name="SparkDamage" type="AnimatedSprite2D" parent="ElectricTower5Sections"]
visible = false
position = Vector2(23, 4)
scale = Vector2(1.625, 1.5)
sprite_frames = SubResource("SpriteFrames_l2spq")
animation = &"SparkDamage"

[node name="SparkDamage2" type="AnimatedSprite2D" parent="ElectricTower5Sections"]
visible = false
position = Vector2(90, 4)
scale = Vector2(1.625, 1.5)
sprite_frames = SubResource("SpriteFrames_l2spq")
animation = &"SparkDamage"

[node name="ElectricTower3Sections" type="Area2D" parent="."]
visible = false
collision_layer = 2

[node name="BeginingElectricTower" type="Sprite2D" parent="ElectricTower3Sections"]
texture = ExtResource("1_ttmb0")

[node name="Legs" type="Sprite2D" parent="ElectricTower3Sections/BeginingElectricTower"]
position = Vector2(0, 27)
texture = ExtResource("3_wxefq")

[node name="WireExtension" type="Sprite2D" parent="ElectricTower3Sections"]
position = Vector2(32, 0)
texture = ExtResource("2_rh35o")

[node name="EndElectricTower" type="Sprite2D" parent="ElectricTower3Sections"]
position = Vector2(64, 0)
texture = ExtResource("3_kaowo")

[node name="Legs" type="Sprite2D" parent="ElectricTower3Sections/EndElectricTower"]
position = Vector2(0, 27)
texture = ExtResource("3_wxefq")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="ElectricTower3Sections"]
polygon = PackedVector2Array(-7, 5, 7, 8, 19, 11, 27, 10, 39, 7, 47, 4)

[node name="SparksBegining1Section" type="AnimatedSprite2D" parent="ElectricTower3Sections"]
position = Vector2(1, 0)
scale = Vector2(1.34375, 1.47656)
sprite_frames = SubResource("SpriteFrames_6knjb")
animation = &"SparkBegining"
autoplay = "SparkBegining"
frame_progress = 0.148997
speed_scale = 0.2

[node name="SparksBegining2Section" type="AnimatedSprite2D" parent="ElectricTower3Sections"]
position = Vector2(65, 2)
scale = Vector2(1.34375, 1.47656)
sprite_frames = SubResource("SpriteFrames_6knjb")
animation = &"SparkBegining"
autoplay = "SparkBegining"
frame_progress = 0.338328
speed_scale = 0.2

[node name="SparkDamage" type="AnimatedSprite2D" parent="ElectricTower3Sections"]
visible = false
position = Vector2(23, 4)
scale = Vector2(1.625, 1.5)
sprite_frames = SubResource("SpriteFrames_l2spq")
animation = &"SparkDamage"

[node name="Timer" type="Timer" parent="."]
wait_time = 0.5
autostart = true

[connection signal="body_entered" from="ElectricTower5Sections" to="." method="_on_electric_tower_5_sections_body_entered"]
[connection signal="animation_finished" from="ElectricTower5Sections/SparkDamage2" to="." method="_on_spark_damage_2_animation_finished"]
[connection signal="body_entered" from="ElectricTower3Sections" to="." method="_on_electric_tower_3_sections_body_entered"]
[connection signal="animation_finished" from="ElectricTower3Sections/SparkDamage" to="." method="_on_spark_damage_animation_finished"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
